--- a/www/Model/login_form.html
+++ b/www/Model/login_form.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<form action="../Controller/login_control.php" method="GET">
+    <input type="email" name="email" value="" alt="Renseigner votre email..." />
+    <input type="password" name="password" value="" alt="Renseigner votre mot de passe..." />
+    <input type="submit" />
+</form>
