--- a/www/Model/Header.html
+++ b/www/Model/Header.html
@@ -1,7 +1,5 @@
 
 
-<header class="p-3 mb-2 bg-danger text-white"> 
-        <p>EducaOps</p>    
-    
-    
+<header class="container-fluid bg-danger text-white"> 
+        <p>EducaOps</p>
 </header>
