--- a/www/Model/login_form.html
+++ b/www/Model/login_form.html
@@ -1,11 +1,11 @@
-<div class="container">
+<div class="container ">
     <div class="row text-center">
         <div class="col-xs-12 col-sm-12">
             <div class="container w-25 mt-2">
                 <div class="mr-auto">
-                    <h1 class="p-0 m-0" style="font-size: 45px; color: #f9a328;">
-                        <b>EducaOps</b>
-                    </h1>
+                    <h4 class="p-0 m-0" style="color: #f9a328;">
+                        <b>Bienvenue, vous pouvez vous connecter au site</b>
+                    </h4>
                     <form class="mt-4" action="../Controller/login_control.php" method="GET">
                                 <div class="form-group">
                                     <input type="email" name="email" class="form-control" placeholder="Adresse email " />
