--- a/www/Model/Footer.html
+++ b/www/Model/Footer.html
@@ -1,3 +1,3 @@
-<footer class="p-3 bg-danger text-white">            
+<footer class="p-3 bg-danger text-white fixed-bottom">            
     <p>Site réalisé par Antonin LEMOINE et Thibaud LEJEUNE</p>
 </footer>
